<resources>
    <string name="app_name">Futebolizando</string>

    <string name="btnAmigos">Amigos</string>
    <string name="btnCadAmigos">Cadastrar novo amigo</string>


    <string name="btnPartidas">Partidas</string>
    <string name="btnGenPartidas">Gerar partidas</string>
    <string name="btnTimes">Times</string>
    <string name="tvRelatorios">Relatórios</string>
    <string name="tvMenu">Menu</string>
    <string name="btnPlacarJogos">Placar (jogos)</string>
    <string name="btnRanking">Ranking (amigos)</string>
    <string name="tvAmigos">Amigos</string>
    <string name="tvCadAmigo">Cadastrar amigo</string>
    <string name="edtNome">Nome</string>
    <string name="btnSalvarAmigo">Salvar</string>
    <string name="btnListViewAmigosEdit">Editar</string>
    <string name="btnListViewAmigosDelete">Apagar</string>
    <string name="tvListViewAmigosNome">Nome</string>
    <string name="tvListViewTimesNome">Nome do time</string>
    <string name="btnListViewTimesCad">Cadastrar novo time</string>
    <string name="tvTimes">Times</string>
    <string name="btnCadTimes">Cadastrar novo time</string>
    <string name="tvCadTime">Cadastrar time</string>
    <string name="tvCadTimeSelecioneAmigo">Selecione o amigo:</string>
    <string name="btnCadTimeSalvar">Salvar</string>
    <string name="btnCadTimeDelete">Excluir</string>
    <string name="btnTimesCadCadastrarJogador">Cadastrar Jogador</string>
    <string name="btnTimesCadJogadores">Jogadores</string>
    <string name="tvJogadores">Jogadores</string>
    <string name="btnJogadoresCadJogador">Cadastrar Jogador</string>
    <string name="tvListViewJogadoresNome">Nome do jogador</string>
    <string name="tvCadJogadorMensagem">Digite o nome do jogador:</string>
    <string name="tvPartidaNomeTimeA">TimeA</string>
    <string name="tvPartidaNomeTimeB">TimeB</string>
    <string name="tvPartidaGolsTimeA">0</string>
    <string name="tvPartidaGolsTimeB">0</string>
    <string name="tvPartidas">Partidas</string>
    <string name="btnPartidasGerarPartida">Sortear partidas</string>
    <string name="btnPartidasLimparPartidas">Limpar partidas</string>
    <string name="btnMainZerarTudo">Apagar todos os dados</string>
    <string name="btnFinalizaPartidaSalvaPlacar">Salvar placar</string>
    <string name="tvFinalizaPartidaTimeA">Gols do Time A</string>
    <string name="tvFinalizaPartidaTimeB">Gols do Time B</string>
    <string name="btnFinalizarRodada">Finalizar rodada</string>
    <string name="tvRanking">Ranking</string>
</resources>
