<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/btnAmigos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAmigos" />

        <Button
            android:id="@+id/btnTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTimes" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPartidas" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>